--- a/.github/workflows/deploy-vite.yml
+++ b/.github/workflows/deploy-vite.yml
@@ -45,10 +45,6 @@ jobs:
                   echo "destination=$destination" >> $env:GITHUB_ENV
                   echo "deploy_script=deploy.bat" >> $env:GITHUB_ENV
 
-            - name: Download deploy script
-              run: |
-                  Invoke-WebRequest -Uri "https://raw.githubusercontent.com/Toppingeni/deploy-script/main/deploy.bat" -OutFile "deploy.bat"
-
             - name: Stop application
               run: ./deploy.bat stop ${{env.appName}}
 
@@ -66,6 +62,9 @@ jobs:
 
             - name: Copy deploy script
               run: Copy-Item -Path ".\deploy.bat" -Destination "$env:destination\" -Force
+
+            - name: Install serve globally
+              run: npm install -g serve
 
             - name: Start application
               run: |
