Add authentication system with RTK Query integration
- Implement auth context, login page, and private route components
- Add API layer for authentication and token management
- Configure environment variables for API endpoints and auth bypass
- Update routing to include protected routes and login flow
- Add loading context for better UX during auth operations

--- a/.env.example
+++ b/.env.example
@@ -5,16 +5,21 @@ VITE_APP_NAME="Kim Pai Repair Flow"
 VITE_APP_VERSION="1.0.0"
 
 # API Configuration (ถ้ามี backend API)
-# VITE_API_URL=https://your-api-url.com
+# ใช้โดย RTK Query baseQuery
+VITE_API_URL=https://your-api-url.com
 # VITE_API_VERSION=v1
 
 # Authentication (ถ้าใช้ external auth service)
-# VITE_AUTH_DOMAIN=your-auth-domain.com
+# ใช้โดย auth/api.ts สำหรับ login/logout
+VITE_API_AUTH_URL=https://your-auth-domain
 # VITE_AUTH_CLIENT_ID=your-client-id
 
 # Feature Flags
 VITE_ENABLE_MOCK_DATA=true
 VITE_ENABLE_DEBUG=false
+
+# Dev only: bypass auth guard and auto-login mock user
+VITE_BYPASS_AUTH=false
 
 # Analytics (ถ้าใช้)
 # VITE_GA_TRACKING_ID=GA-XXXXXXXXX
