--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./client/*"],
+      "@shared/*": ["./shared/*"]
     },
     "noImplicitAny": false,
     "noUnusedParameters": false,
